# etoal.com

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html
.github/workflows/: deploy.yml
json/: simplest_sample.json
src/: about.rs  contents.rs  hello_cube.rs  home.rs  lib.rs  main.rs  theme.rs
src/contents/: works.rs
src/contents/works/: logic_gate_components.rs
