[package]
version = "0.1.0"
name = "etoal_com"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["EtoAl"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
