[package]
version = "0.1.0"
name = "etoal_com"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["EtoAl"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = { git = "https://github.com/seed-rs/seed", branch = "master" }
seed_styles = { git = "https://github.com/seed-rs/styles_hooks", package = "seed_styles", branch = "main" }
seed_hooks = { git = "https://github.com/seed-rs/styles_hooks", package = "seed_hooks", branch = "main" }
awsm_web = { version = "^0.28", features = ["webgl", "tick", "loaders", "serde_iso"], default-features = false }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
